feat: implement editable drawing features on map component

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -38,5 +38,6 @@
   "profile.title": "Profile",
   "profile.tab.account": "My Account",
   "profile.tab.settings": "Settings",
-  "profile.tab.settings.language.label": "Select language:"
+  "profile.tab.settings.language.label": "Select language:",
+  "map.controls.size": "Size"
 }
